--- a/InfiniteChestsV3/InfiniteChestsV3.csproj
+++ b/InfiniteChestsV3/InfiniteChestsV3.csproj
@@ -10,24 +10,12 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="OTAPI.Upcoming" Version="3.1.20" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.355802">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="TSAPI" Version="5.1.3" />
     <PackageReference Include="TShock" Version="5.1.3" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="ModFramework">
-      <HintPath>References\ModFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="OTAPI">
-      <HintPath>References\OTAPI.dll</HintPath>
-    </Reference>
-    <Reference Include="TShockAPI">
-      <HintPath>References\TShockAPI.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
